--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
             </div>
         </div>
 
+        <div class="loader-wrapper">
+            <div class="lds-ripple"><div></div><div></div></div>
+        </div>
+
         <button class="show-more">Следующие 20 фильмов</button>
 
     </div>
