--- a/index.html
+++ b/index.html
@@ -63,6 +63,28 @@
 
     </div>
 
+    <div class="container-right">
+        <button class="btn-close"><img src="./img/cross.svg" alt="Close" width="24"></button>
+        <div class="film">
+
+            <div class="film__title">Название фильма</div>
+
+            <div class="film__img">
+                <img src="./img/cover.webp" alt="Cover">
+            </div>
+
+            <div class="film__desc">
+                <p class="film__details">Год: 2018</p>
+                <p class="film__details">Рейтинг: 8.4</p>
+                <p class="film__details">Продолжительность: 3 ч. 1 мин.</p>
+                <p class="film__details">Страна: США</p>
+                <p class="film_text">Хакер Нео узнает, что его мир — виртуальный. Выдающийся экшен, доказавший, что зрелищное кино может быть умным</p>
+            </div>
+            
+        </div>
+    </div>
+
+
     <script src="./main.js"></script>
 </body>
 </html>
