Getting started with API

--- a/index.html
+++ b/index.html
@@ -12,47 +12,12 @@
         <h1 class="title-1">Movies Catalog</h1>
 
         <div class="films">
-            <div class="card">
+            <!-- <div class="card">
                 <img src="./img/cover.webp" alt="Cover" class="card__img">
                 <h3 class="card__title">Обливион</h3>
                 <p class="card__year">2018</p>
                 <p class="card__rate">Рейтинг: 9.2</p>
-            </div>
-
-            <div class="card">
-                <img src="./img/cover.webp" alt="Cover" class="card__img">
-                <h3 class="card__title">Обливион</h3>
-                <p class="card__year">2018</p>
-                <p class="card__rate">Рейтинг: 9.2</p>
-            </div>
-
-            <div class="card">
-                <img src="./img/cover.webp" alt="Cover" class="card__img">
-                <h3 class="card__title">Обливион</h3>
-                <p class="card__year">2018</p>
-                <p class="card__rate">Рейтинг: 9.2</p>
-            </div>
-
-            <div class="card">
-                <img src="./img/cover.webp" alt="Cover" class="card__img">
-                <h3 class="card__title">Обливион</h3>
-                <p class="card__year">2018</p>
-                <p class="card__rate">Рейтинг: 9.2</p>
-            </div>
-
-            <div class="card">
-                <img src="./img/cover.webp" alt="Cover" class="card__img">
-                <h3 class="card__title">Обливион</h3>
-                <p class="card__year">2018</p>
-                <p class="card__rate">Рейтинг: 9.2</p>
-            </div>
-
-            <div class="card">
-                <img src="./img/cover.webp" alt="Cover" class="card__img">
-                <h3 class="card__title">Обливион</h3>
-                <p class="card__year">2018</p>
-                <p class="card__rate">Рейтинг: 9.2</p>
-            </div>
+            </div> -->
         </div>
 
         <div class="loader-wrapper">
@@ -63,7 +28,7 @@
 
     </div>
 
-    <div class="container-right">
+    <div class="container-right none">
         <button class="btn-close"><img src="./img/cross.svg" alt="Close" width="24"></button>
         <div class="film">
 
@@ -80,10 +45,9 @@
                 <p class="film__details">Страна: США</p>
                 <p class="film_text">Хакер Нео узнает, что его мир — виртуальный. Выдающийся экшен, доказавший, что зрелищное кино может быть умным</p>
             </div>
-            
+
         </div>
     </div>
-
 
     <script src="./main.js"></script>
 </body>
