--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
             </div> -->
         </div>
 
-        <div class="loader-wrapper">
+        <div class="loader-wrapper none">
             <div class="lds-ripple"><div></div><div></div></div>
         </div>
 
-        <button class="show-more">Следующие 20 фильмов</button>
+        <button class="show-more none">Следующие 20 фильмов</button>
 
     </div>
 
