Getting movie data

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     </div>
 
-    <div class="container-right none">
+    <!-- <div class="container-right none">
         <button class="btn-close"><img src="./img/cross.svg" alt="Close" width="24"></button>
         <div class="film">
 
@@ -47,7 +47,7 @@
             </div>
 
         </div>
-    </div>
+    </div> -->
 
     <script src="./main.js"></script>
 </body>
